infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scrolluniversity
  labels:
    name: scrolluniversity
    environment: production
    app: scrolluniversity
